# sheets-for-person-schema

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  pypi-publish.yaml
NamedThing/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
about/: index.html
age_in_years/: index.html
birth_date/: index.html
description/: index.html
docs/: NamedThing.md  Person.md  PersonCollection.md  PersonStatus.md  about.md  age_in_years.md  birth_date.md  description.md  entries.md  id.md  index.md  name.md  primary_email.md  sheets-for-person-schema.md  vital_status.md
entries/: index.html
examples/: README.md
id/: index.html
name/: index.html
primary_email/: index.html
project/excel/: sheets_for_person_schema.xlsx
project/jsonld/: sheets_for_person_schema.context.jsonld  sheets_for_person_schema.jsonld
project/jsonschema/: sheets_for_person_schema.schema.json
project/owl/: sheets_for_person_schema.owl.ttl
project/prefixmap/: sheets_for_person_schema.yaml
project/protobuf/: sheets_for_person_schema.proto
project/shacl/: sheets_for_person_schema.shacl.ttl
project/shex/: sheets_for_person_schema.shex
search/: search_index.json
sheets-for-person-schema/: index.html
sheets_related/: sheets_related.Makefile
sheets_related/output_yaml/: placeholder.txt
sheets_related/templates/: enums.tsv  (+5 more)
tests/: __init__.py  test_data.py
types/: index.html
vital_status/: index.html
(+5 files in other folders)
