[tool.poetry]
name = "sheets_for_person_schema"
version = "0.1.0"
description = "Files for schemasheets exercises at ICBO 2022"
authors = ["Mark Andrew Miller <mam@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/sheets_for_person_schema/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry.dev-dependencies]
linkml = "^1.3.3"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
